--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "src": "app.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/app.js" }
+    { "src": "/api/(.*)", "dest": "/app.js" },
+    { "src": "/api-docs", "dest": "/app.js" } 
   ]
 }
